# python-ldraw

./: .pre-commit-config.yaml  README.rst  local_gen.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: brothers.py  buggy.py  diver.py  figure.py  figures.py  mandelbrot.py  moon_landing.py  stairs.py
ldraw/: __init__.py  compat.py  config.py  figure.py  geometry.py  parts.py  pieces.py  resources.py  utils.py
ldraw/generation/: __init__.py  colours.py  parts.py
ldraw/templates/: fullparts.mustache
ldraw/tools/: __init__.py  ldr2inv.py  ldr2png.py  ldr2pov.py  ldr2svg.py
ldraw/writers/: common.py  png.py  povray.py
oldies/: setup.cfg  setup.py
tests/: test_config.py  test_download.py  test_dynamic_import.py  test_examples.py  test_geometry.py  test_library_gen.py  test_load_parts.py  test_pieces.py  test_tools.py  test_utils.py
tests/test_ldraw2/: LDConfig.ldr
tests/utils/: __init__.py
