[tool.poetry]
name = "python-ldraw"
version = "0.9.0-dev"
description = "Python wrapper for LDraw library."
authors = ["David Boddie <david@boddie.org.uk>", "Matthieu Berthomé <rienafairefr@gmail.com>"]
packages = [ { include = "ldraw" } ]

[tool.poetry.scripts]
ldr2inv = "ldraw.tools.ldr2inv:main"
ldr2png = "ldraw.tools.ldr2png:main"
ldr2pov = "ldraw.tools.ldr2pov:main"
ldr2svg = "ldraw.tools.ldr2svg:main"


[tool.poetry.dependencies]
python = "^3.6.1"
appdirs = "^1.4.4"
numpy = "^1.19.0"
pymklist = "^1.0.0"
pystache = "^0.5.4"
attrdict = "^2.0.1"
progress = "^1.5"
pyyaml = "^5.3.1"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
black = "^19.10b0"
tox = "^3.16.1"
pytest = "^5.4.3"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/

)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
known_first_party = ["ldraw"]
known_third_party = ["PIL", "appdirs", "attrdict", "mklist", "mock", "numpy", "pkg_resources", "progress", "pystache", "pytest", "setuptools", "yaml"]

[tool.coverage.run]
include = ["ldraw/*"]
omit = ["ldraw/library/*"]
plugins = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
